# lbvh

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  fake_thread_pool.h  lbvh.h  lbvh_test.cpp
bench/: bvh_library.cpp  bvh_library.h  library.cpp  library.h  main.cpp  this_library.cpp  this_library.h
debug/: print_graph.cpp
examples/: minimal.cpp
models/: README.md  model.h  sponza.mtl  tiny_obj_loader.h
tools/: simplify_model.cpp
